fix type dto to openapi
